--- a/src/designSystem/globals.scss
+++ b/src/designSystem/globals.scss
@@ -2,100 +2,109 @@
 @import "@/designSystem/mediaQueries";
 
 :root {
-	// color palette
-	--neutral-background: #ffffff;
-	--neutral-light: #f3f4f6;
-	--neutral-border: #a8b0bd;
-	--neutral-text: #121417;
+  // color palette
+  --neutral-background: #ffffff;
+  --neutral-light: #f3f4f6;
+  --neutral-border: #a8b0bd;
+  --neutral-text: #121417;
 
-	--primary-hover: #000a33;
-	--primary-main: #0a1fa3;
-	--primary-active: #2548f8;
-	--primary-contrast-text: #000000;
+  --primary-hover: #000a33;
+  --primary-main: #0a1fa3;
+  --primary-active: #2548f8;
+  --primary-contrast-text: #000000;
 
-	--accent-hover: #00c27a;
-	--accent-main: #00e48f;
-	--accent-active: #00ffa0;
-	--accent-contrast-text: #000a33;
+  --accent-hover: #00c27a;
+  --accent-main: #00e48f;
+  --accent-active: #00ffa0;
+  --accent-contrast-text: #000a33;
 }
 
 // dark theme
 [data-theme="dark"] {
-	// color palette
-	--neutral-background: #121417;
-	--neutral-border: #dcdfe5;
-	--neutral-text: #ffffff;
+  // color palette
+  --neutral-background: #121417;
+  --neutral-border: #dcdfe5;
+  --neutral-text: #ffffff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    // color palette
+    --neutral-background: #121417;
+    --neutral-border: #dcdfe5;
+    --neutral-text: #ffffff;
+  }
 }
 
 // global reset
 *,
 *::after,
 *:before {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	box-sizing: border-box;
-	font-family: inherit;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  box-sizing: border-box;
+  font-family: inherit;
 }
 
 html,
 body {
-	scroll-behavior: smooth;
-	height: -webkit-fill-available;
+  scroll-behavior: smooth;
+  height: -webkit-fill-available;
 
-	background-color: var(--neutral-background);
-	color: var(--neutral-text);
+  background-color: var(--neutral-background);
+  color: var(--neutral-text);
 
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-font-smoothing: antialiased;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 
-	font-family: var(--font-inter);
-	font-display: swap;
-	font-size: 16px;
-	line-height: 1.3;
+  font-family: var(--font-inter);
+  font-display: swap;
+  font-size: 16px;
+  line-height: 1.3;
 }
 
 body {
-	overflow-x: hidden;
-	margin-right: calc(-1 * (100vw - 100%));
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 
-	&.freeze {
-		overflow-y: hidden;
-	}
+  &.freeze {
+    overflow-y: hidden;
+  }
 }
 
 main {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 h1,
 h2,
 h3,
 h4 {
-	font-family: var(--font-grotesk);
-	font-weight: 400;
-	font-size: 2rem;
+  font-family: var(--font-grotesk);
+  font-weight: 400;
+  font-size: 2rem;
 }
 
 a {
-	font-weight: 500;
-	color: var(--primary-active);
-	text-decoration: none;
+  font-weight: 500;
+  color: var(--primary-active);
+  text-decoration: none;
 
-	&:hover,
-	&:focus {
-		color: var(--primary-active);
-	}
+  &:hover,
+  &:focus {
+    color: var(--primary-active);
+  }
 }
 
 button {
-	cursor: pointer;
-	background-color: transparent;
-	text-decoration: none;
-	color: inherit;
+  cursor: pointer;
+  background-color: transparent;
+  text-decoration: none;
+  color: inherit;
 }
