--- a/src/designSystem/variables.scss
+++ b/src/designSystem/variables.scss
@@ -1,50 +1,46 @@
-$text: (
-	"xs": 12,
-	"sm": 14,
-	"md": 16,
-	"lg": 18,
-	"xl": 20,
-	"xxl": 24,
-);
+$font-xs: 8;
+$font-sm: 12;
+$font-md: 16;
+$font-lg: 20;
+$font-xl: 24;
+$font-xxl: 28;
 
-$text-h: (
-	"xs": 24,
-	"sm": 30,
-	"md": 36,
-	"lg": 48,
-	"xl": 60,
-	"xxl": 74,
-);
+$font-h-xs: 24;
+$font-h-sm: 32;
+$font-h-md: 36;
+$font-h-lg: 48;
+$font-h-xl: 64;
+$font-h-xxl: 80;
 
 $headerHeight: (
-	"xs": 83px,
-	"md": 90px,
+  "xs": 83px,
+  "md": 90px,
 );
 
 $breakpoints: (
-	"xs": 0,
-	"sm": 458,
-	"md": 769,
-	"lg": 1025,
-	"xl": 1441,
-	"xxl": 1921,
+  "xs": 0,
+  "sm": 458,
+  "md": 769,
+  "lg": 1025,
+  "xl": 1441,
+  "xxl": 1921,
 );
 
 $align: (
-	"start": flex-start,
-	"center": center,
-	"end": flex-end,
-	"stretch": stretch,
-	"baseline": baseline,
+  "start": flex-start,
+  "center": center,
+  "end": flex-end,
+  "stretch": stretch,
+  "baseline": baseline,
 );
 
 $justify: (
-	"start": flex-start,
-	"center": center,
-	"end": flex-end,
-	"around": space-around,
-	"between": space-between,
-	"evenly": space-evenly,
+  "start": flex-start,
+  "center": center,
+  "end": flex-end,
+  "around": space-around,
+  "between": space-between,
+  "evenly": space-evenly,
 );
 
 $breakpointsNames: ("xs", "sm", "md", "lg", "xl", "xxl");
