--- a/src/components/atoms/Background/styles.module.scss
+++ b/src/components/atoms/Background/styles.module.scss
@@ -5,20 +5,16 @@
   --sidebar-width: 300px;
   --background-color: var(--neutral-background);
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
   height: 100%;
   min-height: 100vh;
+
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
 
   background: var(--background-color);
   background-position: center;
   background-attachment: fixed;
 
   transition: padding 0.3s ease-in;
-
-  @include media-query("lg") {
-    padding-top: map-get($headerHeight, "md");
-  }
 }
