--- a/src/components/atoms/Grid/Container/styles.module.scss
+++ b/src/components/atoms/Grid/Container/styles.module.scss
@@ -4,6 +4,10 @@
 .container {
   --max-width: 1440px;
 
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+
   position: relative;
 
   margin: 1rem auto;
