--- a/src/components/organisms/Hero/styles.module.scss
+++ b/src/components/organisms/Hero/styles.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  height: 90vh;
+  max-height: 1150px;
 
   background-color: var(--primary-hover);
 
