--- a/src/components/organisms/Header/styles.module.scss
+++ b/src/components/organisms/Header/styles.module.scss
@@ -5,10 +5,10 @@
   position: fixed;
   display: flex;
   justify-content: space-between;
-
+  align-items: center;
   top: 0;
   width: 100%;
-  padding: 1rem 3rem;
+  padding: 1rem 5rem;
 
   z-index: 12;
 
@@ -20,7 +20,6 @@
 
   .navbar {
     display: flex;
-    margin-top: 5rem;
 
     &__button {
       @include toRem(font-size, $font-xl);
