--- a/src/components/molecules/CardDisplay/styles.module.scss
+++ b/src/components/molecules/CardDisplay/styles.module.scss
@@ -1,18 +1,30 @@
+@import "@/designSystem/variables";
+@import "@/designSystem/mediaQueries";
+
 .cardDisplay {
-  $width: 400px;
+  --width: 300px;
+  --height: 360px;
 
   position: relative;
   padding: 1rem;
-  max-width: $width;
+  margin: auto;
+  max-width: var(--width);
+
+  @include media-query("lg") {
+    --width: 400px;
+    --height: 460px;
+
+    padding: 0 2.5rem;
+  }
 
   .imageContainer {
     width: 100%;
-    height: 500px;
+    height: var(--height);
     position: relative;
 
     .backgroundImage {
       object-fit: cover;
-      border-radius: $width $width 0 0;
+      border-radius: var(--width) var(--width) 0 0;
       overflow: hidden;
     }
 
