--- a/src/components/organisms/Header/styles.module.scss
+++ b/src/components/organisms/Header/styles.module.scss
@@ -6,7 +6,7 @@
   position: fixed;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   top: 0;
   width: 100%;
   padding: 1rem 1rem;
@@ -15,11 +15,12 @@
 
   @include media-query("lg") {
     padding: 1.5rem 5rem;
+    align-items: center;
   }
 
   .logoContainer {
     position: relative;
-    height: 150px;
+    height: 120px;
     width: 80px;
 
     @include media-query("lg") {
@@ -43,6 +44,8 @@
 
   .hamburger {
     display: block;
+    width: 50px;
+    height: 50px;
 
     @include media-query("lg") {
       display: none;
