--- a/src/components/molecules/CardDisplay/styles.module.scss
+++ b/src/components/molecules/CardDisplay/styles.module.scss
@@ -30,15 +30,17 @@
 
     .titleContainer {
       position: absolute;
-      bottom: -10;
+      bottom: -1rem;
       left: -1rem;
       padding: 0.2rem 1rem;
       background-color: var(--accent-main);
       color: var(--neutral-background);
+
+      z-index: 1;
     }
   }
 
   .descriptionContainer {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
   }
 }
