--- a/src/components/atoms/SectionTitle/styles.module.scss
+++ b/src/components/atoms/SectionTitle/styles.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   position: relative;
   z-index: 1;
-  margin: 2rem auto;
+  margin: 2rem 0;
 
   .iconContainer {
     z-index: -1;
@@ -14,6 +14,7 @@
     top: 50%;
     left: 0;
     transform: translate(-50%, -50%);
+
     .icon {
       fill: var(--accent-main);
     }
