--- a/src/components/organisms/Header/styles.module.scss
+++ b/src/components/organisms/Header/styles.module.scss
@@ -31,6 +31,11 @@
 
   .navbar {
     display: none;
+    margin-bottom: 2rem;
+
+    a {
+      color: white;
+    }
 
     @include media-query("lg") {
       display: flex;
