--- a/src/components/organisms/Section/styles.module.scss
+++ b/src/components/organisms/Section/styles.module.scss
@@ -14,11 +14,18 @@
 
   transition: padding 0.3s ease-in;
 
+  position: relative;
   display: flex;
   align-items: center;
 
   .content {
     width: 100%;
     flex: 1;
+  }
+
+  .backgroundImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
