--- a/src/components/molecules/InfiniteText/styles.module.scss
+++ b/src/components/molecules/InfiniteText/styles.module.scss
@@ -2,6 +2,8 @@
 @import "@/designSystem/mediaQueries";
 
 .infiniteText {
+  background: var(--background-color);
+
   max-width: 100%;
   overflow: hidden;
   border-top: 4px solid var(--neutral-text);
