--- a/src/designSystem/globals.scss
+++ b/src/designSystem/globals.scss
@@ -64,7 +64,7 @@ body {
   scroll-behavior: smooth;
   height: -webkit-fill-available;
 
-  background-color: var(--neutral-background);
+  background-color: var(--primary-main);
   color: var(--neutral-text);
 
   -ms-text-size-adjust: 100%;
