--- a/src/components/molecules/CardFrame/styles.module.scss
+++ b/src/components/molecules/CardFrame/styles.module.scss
@@ -9,9 +9,11 @@
 
   max-width: var(--width);
 
+  margin: 3rem 1rem;
+
   @include media-query("lg") {
     --width: 400px;
-    --height: 550px;
+    --height: 600px;
   }
 
   .imageContainer {
