CEO first batch

--- a/src/components/organisms/Footer/styles.module.scss
+++ b/src/components/organisms/Footer/styles.module.scss
@@ -3,34 +3,13 @@
 @import "@/designSystem/utils";
 
 .footer {
+  margin: 0 auto;
   margin-top: 10rem;
-  padding: 4rem 0;
+  padding: 4rem 2rem;
   color: var(--neutral-light);
   background-color: var(--neutral-text);
 
   border-radius: 2rem 2rem 0 0;
 
-  .footer__text {
-    margin-bottom: 1rem;
-    text-align: center;
-
-    @include media-query("lg") {
-      margin-bottom: 0;
-      text-align: left;
-    }
-  }
-
-  .footer__links {
-    display: flex;
-    gap: 1.5rem;
-
-    a {
-      color: var(--neutral-background);
-      text-decoration: none;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
+  max-width: 1440px;
 }
