--- a/src/components/atoms/Grid/Col/styles.module.scss
+++ b/src/components/atoms/Grid/Col/styles.module.scss
@@ -2,44 +2,44 @@
 @import "@/designSystem/mediaQueries";
 
 .col {
-	box-sizing: border-box;
-	max-width: 100%;
+  box-sizing: border-box;
+  max-width: 100%;
 
-	padding: 0.5rem;
-	flex: 1;
+  padding: 0.5rem;
+  flex: 1;
 
-	& {
-		min-height: auto;
-	}
+  & {
+    min-height: auto;
+  }
 }
 
 @each $bpName in $breakpointsNames {
-	@include media-query($bpName, "min") {
-		@each $col in $columns {
-			.#{$bpName}-#{$col} {
-				flex-basis: #{(100 / 12) * $col} + "%";
-				max-width: #{(100 / 12) * $col} + "%";
-			}
-		}
+  @include mediaQuery($bpName, "min") {
+    @each $col in $columns {
+      .#{$bpName}-#{$col} {
+        flex-basis: #{(100 / 12) * $col} + "%";
+        max-width: #{(100 / 12) * $col} + "%";
+      }
+    }
 
-		@each $offset in $offsets {
-			.#{$bpName}Offset-#{$offset} {
-				margin-left: #{(100 / 12) * $offset} + "%";
-			}
-		}
+    @each $offset in $offsets {
+      .#{$bpName}Offset-#{$offset} {
+        margin-left: #{(100 / 12) * $offset} + "%";
+      }
+    }
 
-		@each $al in $align {
-			$value: nth($al, 2);
+    @each $al in $align {
+      $value: nth($al, 2);
 
-			.#{$bpName}AlignSelf-#{$value} {
-				align-self: $value;
-			}
-		}
+      .#{$bpName}AlignSelf-#{$value} {
+        align-self: $value;
+      }
+    }
 
-		@for $i from 1 to 20 {
-			.#{$bpName}Order-#{$i} {
-				order: $i;
-			}
-		}
-	}
+    @for $i from 1 to 20 {
+      .#{$bpName}Order-#{$i} {
+        order: $i;
+      }
+    }
+  }
 }
