--- a/src/components/molecules/InfiniteText/styles.module.scss
+++ b/src/components/molecules/InfiniteText/styles.module.scss
@@ -10,6 +10,12 @@
   border-bottom: 4px solid var(--neutral-text);
   padding: 1rem 0;
 
+  min-height: 40px;
+
+  @include mediaQuery("lg") {
+    min-height: 80px;
+  }
+
   .item {
     position: relative;
     display: flex;
