--- a/src/designSystem/globals.scss
+++ b/src/designSystem/globals.scss
@@ -77,7 +77,7 @@ body {
   font-size: $font-sm;
   line-height: 1.2;
 
-  @include media-query("lg") {
+  @include mediaQuery("lg") {
     font-size: $font-md;
   }
 }
