--- a/src/components/organisms/Header/styles.module.scss
+++ b/src/components/organisms/Header/styles.module.scss
@@ -56,12 +56,17 @@
     }
   }
 
+  .MuiSvgIcon-root {
+    @include toRem(font-size, $font-h-lg);
+    background-color: red;
+  }
+
   .hamburger {
     cursor: pointer;
     display: block;
-    width: 50px;
-    height: 50px;
     z-index: 3;
+
+    font-size: 2rem;
 
     @include mediaQuery("lg") {
       display: none;
@@ -83,12 +88,12 @@
 
     z-index: 1;
 
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
     &--open {
-      display: flex;
       opacity: 1;
       pointer-events: all;
     }
