adapted cards for mobile

--- a/src/components/molecules/CardFrame/styles.module.scss
+++ b/src/components/molecules/CardFrame/styles.module.scss
@@ -3,11 +3,11 @@
 
 .cardFrame {
   --width: 300px;
-  --height: 400px;
+  --height: 500px;
   --radius1: 15rem;
   --radius2: 1rem;
 
-  max-width: var(--width);
+  // max-width: var(--width);
 
   margin: 3rem 1rem;
 
