--- a/src/designSystem/globals.scss
+++ b/src/designSystem/globals.scss
@@ -74,7 +74,7 @@ body {
 
   font-family: var(--font-inter);
   font-display: swap;
-  font-size: $font-sm;
+  font-size: $font-md;
   line-height: 1.2;
 
   @include mediaQuery("lg") {
