--- a/src/components/atoms/TextField/styles.module.scss
+++ b/src/components/atoms/TextField/styles.module.scss
@@ -16,25 +16,22 @@
   padding-top: 1.5rem;
   font-size: 1rem;
   border: 1px solid var(--neutral-border);
-  border-radius: 0.25rem;
-  background-color: var(--neutral-background);
+  border-radius: 0.5rem;
+  background-color: transparent;
   color: var(--neutral-text);
-  transition: all 0.2s ease;
+  transition: outline-width 0.2s ease;
   font-family: inherit;
 
   &:focus {
-    outline: none;
-    border-color: var(--accent-main);
-    border-width: 2px;
-    padding: calc(1rem - 1px);
-    padding-top: calc(1.5rem - 1px);
+    outline: 2px solid var(--accent-main);
+    outline-offset: -2px;
   }
 
   &:focus + .label,
   &:not(:placeholder-shown) + .label {
-    top: 0.25rem;
+    top: 0.5rem;
     font-size: 0.75rem;
-    color: var(--accent-main);
+    // color: var(--accent-main);
   }
 
   &.error {
@@ -58,13 +55,12 @@
 .label {
   position: absolute;
   left: 1rem;
-  top: 1rem;
+  top: 1.2rem;
   font-size: 1rem;
-  color: var(--neutral-border);
+  color: var(--neutral-text);
   transition: all 0.2s ease;
   pointer-events: none;
-  background-color: var(--neutral-background);
-  padding: 0 0.25rem;
+  background-color: transparent;
 }
 
 .errorText {
