--- a/src/components/organisms/Hero/styles.module.scss
+++ b/src/components/organisms/Hero/styles.module.scss
@@ -20,6 +20,36 @@
     opacity: 0.5;
   }
 
+  .breadcrumbWrapper {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    padding: 0;
+
+    @include mediaQuery("md") {
+      bottom: 30px;
+    }
+
+    :global(nav) {
+      padding: 0 !important;
+      color: white !important;
+    }
+
+    :global(a) {
+      color: white !important;
+
+      &:hover {
+        opacity: 0.7 !important;
+      }
+    }
+
+    :global(span) {
+      color: rgba(255, 255, 255, 0.9) !important;
+    }
+  }
+
   .textWrapper {
     width: 100%;
     display: flex;
