--- a/src/components/organisms/Footer/styles.module.scss
+++ b/src/components/organisms/Footer/styles.module.scss
@@ -42,14 +42,17 @@
     }
   }
 
-  .socialLink {
+  a.socialLink {
     display: flex;
     align-items: center;
     gap: 0.5rem;
   }
 
   .copyright {
-    margin-top: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
     padding-top: 2rem;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     text-align: center;
