--- a/src/components/atoms/TextField/styles.module.scss
+++ b/src/components/atoms/TextField/styles.module.scss
@@ -1,5 +1,5 @@
-@import "@/designSystem/variables";
-@import "@/designSystem/mediaQueries";
+@import "../../../designSystem/variables";
+@import "../../../designSystem/mediaQueries";
 
 .wrapper {
   position: relative;
