--- a/src/designSystem/mediaQueries.scss
+++ b/src/designSystem/mediaQueries.scss
@@ -1,13 +1,14 @@
-@import "variables";
+@use "sass:map";
+@use "variables";
 
 // Mixin for both min-width and max-width media queries
-@mixin mediaQuery($breakpoint, $type: "min") {
+@mixin media($breakpoint, $type: "min") {
   $query: "";
 
   @if $type == "min" {
-    $query: "min-width: #{map-get($breakpoints, $breakpoint)}px";
+    $query: "min-width: #{map.get(variables.$breakpoints, $breakpoint)}px";
   } @else if $type == "max" {
-    $query: "max-width: #{map-get($breakpoints, $breakpoint) - 1}px";
+    $query: "max-width: #{map.get(variables.$breakpoints, $breakpoint) - 1}px";
   } @else {
     @error "Invalid media query type. Use 'min' or 'max'.";
   }
