--- a/src/components/atoms/Button/styles.module.scss
+++ b/src/components/atoms/Button/styles.module.scss
@@ -1,5 +1,5 @@
-@import "@/designSystem/variables";
-@import "@/designSystem/mediaQueries";
+@import "../../../designSystem/variables";
+@import "../../../designSystem/mediaQueries";
 
 .button {
   display: inline-flex;
