--- a/src/components/atoms/Grid/Container/styles.module.scss
+++ b/src/components/atoms/Grid/Container/styles.module.scss
@@ -1,5 +1,5 @@
-@import "@/designSystem/variables";
-@import "@/designSystem/mediaQueries";
+@use "../../../../designSystem/variables";
+@use "../../../../designSystem/mediaQueries";
 
 .container {
   --max-width: 1440px;
@@ -16,7 +16,7 @@
   width: 100%;
   max-width: var(--max-width);
 
-  @include mediaQuery("sm") {
+  @include mediaQueries.media("sm") {
     padding: 0 2.5rem;
   }
 }
