--- a/src/components/molecules/CardFrame/styles.module.scss
+++ b/src/components/molecules/CardFrame/styles.module.scss
@@ -1,5 +1,5 @@
-@import "@/designSystem/variables";
-@import "@/designSystem/mediaQueries";
+@use "../../../designSystem/variables";
+@use "../../../designSystem/mediaQueries";
 
 .cardFrame {
   --width: 300px;
@@ -9,7 +9,7 @@
 
   margin: 3rem 1rem;
 
-  @include mediaQuery("lg") {
+  @include mediaQueries.media("lg") {
     --width: 400px;
     --height: 600px;
     max-width: var(--width);
