--- a/src/components/organisms/Section/styles.module.scss
+++ b/src/components/organisms/Section/styles.module.scss
@@ -1,5 +1,5 @@
-@import "@/designSystem/variables";
-@import "@/designSystem/mediaQueries";
+@use "../../../designSystem/variables";
+@use "../../../designSystem/mediaQueries";
 
 .section {
   height: 100%;
