--- a/src/components/sections/Locations/styles.module.scss
+++ b/src/components/sections/Locations/styles.module.scss
@@ -1,5 +1,5 @@
-@import "@/designSystem/variables";
-@import "@/designSystem/mediaQueries";
+@use "../../../designSystem/variables";
+@use "../../../designSystem/mediaQueries";
 
 .locations {
   background: var(--neutral-background);
@@ -11,7 +11,7 @@
   gap: 20px;
   margin-top: 40px;
 
-  @include mediaQuery("sm", "max") {
+  @include mediaQueries.media("sm", "max") {
     grid-template-columns: 1fr;
     gap: 16px;
   }
