--- a/src/components/organisms/Header/styles.module.scss
+++ b/src/components/organisms/Header/styles.module.scss
@@ -6,7 +6,7 @@
   position: fixed;
   display: flex;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
   top: 0;
   width: 100%;
   padding: 1rem 1rem;
